--- a/WPFSampleApp/WPFSampleApp.csproj
+++ b/WPFSampleApp/WPFSampleApp.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TelerikTogether\TelerikTogether\TelerikTogether\BarcodeEngine.cs" />
+    <Compile Include="TelerikTogether\TelerikTogether\TelerikTogether\RadMath.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -94,6 +96,5 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
