--- a/WPFSampleApp/WPFSampleApp.csproj
+++ b/WPFSampleApp/WPFSampleApp.csproj
@@ -54,7 +54,15 @@
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>    
+    </ApplicationDefinition>
+    <Compile Include="Sunburst.cs" />
+    <Compile Include="TelerikTogether\BarcodeEngine\BarcodeEngine.cs" />
+    <Compile Include="TelerikTogether\Math\RadMath.cs" />
+    <Compile Include="TelerikTogether\SunburstChartEngine\ISunburstItem.cs" />
+    <Compile Include="TelerikTogether\SunburstChartEngine\SunburstItem.cs" />
+    <Compile Include="TelerikTogether\SunburstChartEngine\SunburstItemCollection.cs" />
+    <Compile Include="TelerikTogether\SunburstChartEngine\SunburstItemViewInfo.cs" />
+    <Compile Include="TelerikTogether\SunburstChartEngine\SunburstLayoutEngine.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +75,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SunburstStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
