--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "WPFSampleApp/TelerikTogether"]
-	path = WPFSampleApp/TelerikTogether
+[submodule "TelerikTogether"]
+	path = TelerikTogether
 	url = https://github.com/martinivanovit/TelerikTogether.git
